# cloudbill

./: AUDIT.md  Dockerfile  INTEGRATIONS.md  INTEROP.md  README.md  ROADMAP.md  install.ps1  install.sh  layman.md  pyproject.toml
.github/workflows/: ci.yml
cloudbill/: __init__.py  __main__.py  cli.py  connect.py  core.py  mcp_server.py
demos/01-basic/: SCENARIO.md  usage.csv
demos/04-aws-cur-aliases/: SCENARIO.md  cur.csv
demos/05-azure-cost-mgmt/: SCENARIO.md  azure_costs.csv
demos/06-gcp-json/: SCENARIO.md  gcp_billing.json
demos/07-savings-plan-spike/: SCENARIO.md  usage.csv
demos/08-focus-export-csv/: SCENARIO.md  mixed_providers.csv
demos/09-multicurrency/: SCENARIO.md  global_costs.csv
demos/10-tag-untagged-region/: SCENARIO.md  sparse.csv
demos/11-ci-budget-gate/: SCENARIO.md  check.sh  daily_drop.csv
deploy/: docker-compose.yml  k8s.yaml
deploy/terraform/: main.tf
docs/: ADVANCED.md  ARCHITECTURE.md  DEPLOY.md  INSTALL.md
examples/: help.txt  version.txt
ports/: README.md
ports/go/: go.mod  main.go
ports/javascript/: index.js  package.json
ports/rust/: Cargo.toml
ports/rust/src/: main.rs
tests/: test_connect.py  test_smoke.py
